edit for capitalization

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -382,7 +382,7 @@ testing wallet balances and redemption. These changes make Hashpool
 easier to test and operate under real-world mining conditions.
 
 Hashpool developer vnprc also collaborated with nostr builders at [Sovereign Engineering](https://sovereignengineering.io/) Cohort 5 resulting in a [published rust crate](https://crates.io/crates/bitcoin-nostr-relay) for transmitting bitcoin transactions via nostr,
-and experiments in ehash payment forwarding via nostr, nix build systems, and a new [user interface](https://nostr.eu/nevent1qqsw2q6nsactqg5c7t3r0se3l276r0xd0agjae6xlv38nzwzuzn8lxcpzemhxue69uhhyetvv9ujumn0wd68ytnzv9hxgq3q6vzjeglr653mrmyqvu0trwaq29az753wr9th3hyrm5p63kz2zu8qf0c27j). These tools will
+and experiments in eHash payment forwarding via nostr, Nix build systems, and a new [user interface](https://nostr.eu/nevent1qqsw2q6nsactqg5c7t3r0se3l276r0xd0agjae6xlv38nzwzuzn8lxcpzemhxue69uhhyetvv9ujumn0wd68ytnzv9hxgq3q6vzjeglr653mrmyqvu0trwaq29az753wr9th3hyrm5p63kz2zu8qf0c27j). These tools will
 be crucial to improving the Hashpool user experience and tooling after the
 core protocol is finalized.
 
