edit to capitalize for consistency

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -368,7 +368,7 @@ With [support](/blog/twelfth-wave-of-bitcoin-grants#hashpool-and-axepool) from
 OpenSats, developments have focused on integrating ecash issuance directly into
 the [Stratum V2](https://stratumprotocol.org/) protocol.
 
-The cashu mining share payment method protocol has evolved significantly and is
+The Cashu mining share payment method protocol has evolved significantly and is
 close to being PR-ready. Major improvements include rewriting the cdk branch
 (for the [fourth time](https://github.com/vnprc/cdk/tree/hashpool5)) to conform to best practices within the cdk repo and [eliminating](https://github.com/vnprc/cdk/commit/c95fb868533e46eda029fe690fc66a805f3e7803) the need for a quote lookup API, which
 significantly increased the privacy and security attack surface of the protocol.
