edit to remove "layer 3"

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -11,8 +11,8 @@ summary: "An impact report from the front-lines of ecash development."
 Ecash is a digital cash system based on [David Chaum's
 work](https://chaum.com/wp-content/uploads/2022/01/Chaum-blind-signatures.pdf)
 from the 1980s, using blind signatures to create and transfer bearer tokens
-without revealing spenders. Cashu adapts this model as a third-layer protocol
-issuing bitcoin-backed tokens settled through the Lightning Network, while
+without revealing spenders. Cashu adapts this model by issuing
+bitcoin-backed tokens redeemable through the Lightning Network, while
 Fedimint applies a federated Chaumian design that allows communities to issue
 and redeem private bearer tokens. Both of these approaches aim to deliver
 private, fast, and offline-capable transactions.
