--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -43,7 +43,7 @@ as in the internal and external processes of our organization.
 ## Financial Statements
 
 - [Year End 2022-2024](/docs/financials/2022-2024.pdf)
-- [2025](/docs/financials/2025.pdf)
+- [YTD Jun. 30, 2025](/docs/financials/2025.pdf)
 
 ## Project Grants
 
