Add quote by Calle

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -106,6 +106,15 @@ between Android wallets, and the [Cashu
 Decoder](https://github.com/callebtc/cashu-decoder) made it easier for
 developers to inspect and debug tokens.
 
+>Cashu has grown into a true pillar of the Bitcoin open-source movement, driving
+>innovations once thought impossible. The free and open-source project has
+>brought countless new developers into Bitcoin. Today, Cashu powers Bitcoin
+>communities worldwide, and is already at the heart of multiple companies’
+>products. This momentum is only possible thanks to our incredible grassroots
+>community and the freedom-driven contributors who make Cashu what it is today.
+>
+><cite>---Calle</cite>
+
 Work is underway on a [proposal](https://github.com/cashubtc/nuts/pull/267) for
 a nostr-based backup format for mint lists, providing multi-mint users a
 portable, censorship-resistant way to restore their setup. Together with the
