Add financial statements to /transparency page (#484)
* Create /Financials folder

Creating the "Financials" folder to store all financial statements

* Add Financial Statements

Financial Statements for 2022-2023-2024
Financial Statements for 2025 Q1-Q2

* Update transparency.mdx

Add the first batch of financial statements:
2022-2023-2024
2025 Q1-Q2

* Delete public/docs/financials/Open Sats Initiative, Inc._Financial Statements 2022-2023-2024.pdf

bad file naming, will replace with another files correctly named.

* Delete public/docs/financials/Open Sats Initiative, Inc._Financial Statements 2025.pdf

bad file naming, will replace with another files correctly named.

* Upload Financial Statement Files

Financial Statements 2022-2023-2024
Financial Statements 2025

* Update transparency.mdx

adding path to new financial statement files

* Add financial statement files with shorter names

Shorter and better name for the files
2022-2024.pdf
2025.pdf

* Delete public/docs/financials/Financial_Statements_2022-2023-2024.pdf

file replaced by other with shorter name

* Delete public/docs/financials/Financial_Statements_2025.pdf

file replaced by other with shorter name

* Delete public/docs/financials/README.md

I used this file only to create the folder, but certainly there was a better way that I have to learn.

* Update wording on financial statements

Shorter and better wording for the financial statements

* `2022-2024` --> `Year End 2022-2024`

* `2025` --> `YTD Jun. 30, 2025`

---------

Co-authored-by: ARVIN <141419722+Arvin21M@users.noreply.github.com>

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -40,6 +40,11 @@ as in the internal and external processes of our organization.
 - [EOY Report: 2023](/blog/2023-year-in-review)
 - [EOY Report: 2024](/blog/2024-year-in-review)
 
+## Financial Statements
+
+- [Year End 2022-2024](/docs/financials/2022-2024.pdf)
+- [YTD Jun. 30, 2025](/docs/financials/2025.pdf)
+
 ## Project Grants
 
 - [List of Bitcoin Grants](/tags/bitcoin/wave)
