--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -113,7 +113,7 @@ developers to inspect and debug tokens.
 >products. This momentum is only possible thanks to our incredible grassroots
 >community and the freedom-driven contributors who make Cashu what it is today.
 >
-><cite>---Calle</cite>
+><cite>—Calle</cite>
 
 Work is underway on a [proposal](https://github.com/cashubtc/nuts/pull/267) for
 a nostr-based backup format for mint lists, providing multi-mint users a
