edit for readability

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -433,8 +433,7 @@ Compose`](https://github.com/fedimint/fedimint/pull/7042) files and a
 federations easier to launch and manage.
 
 Wallet safety and upgrades were the focus of core releases coordinated by
-[Bradley Stachurski](https://github.com/bradleystachurski). A [double-spend
-vulnerability](https://github.com/fedimint/fedimint/pull/6065) was fixed, while
+[Bradley Stachurski](https://github.com/bradleystachurski), while
 [database migrations](https://github.com/fedimint/fedimint/pull/6359) and
 recovery tools were introduced. Real-world federations tested and hardened these
 changes.
