docs(transparency): update transparency page links and sections

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -42,8 +42,11 @@ as in the internal and external processes of our organization.
 
 ## Financial Statements
 
-- [Year End 2022-2024](/docs/financials/2022-2024.pdf)
-- [YTD Jun. 30, 2025](/docs/financials/2025.pdf)
+- [2022](/docs/financials/2022-2024.pdf)
+- [2023](/docs/financials/2022-2024.pdf)
+- [2024](/docs/financials/2022-2024.pdf)
+- [2025-Q1](/docs/financials/2025.pdf)
+- [2025-Q2](/docs/financials/2025.pdf)
 
 ## Project Grants
 
