docs: improve citation formatting in ecash blog post
- Remove redundant attribution line 'As Egge described:'
- Add proper <cite>Egge</cite> tag for consistent formatting

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -355,11 +355,11 @@ maintainer](https://github.com/cashubtc/cashu-ts/releases) of `cashu-ts`, the
 main TypeScript library for the protocol. He contributed hundreds of changes,
 helped lead multiple releases, and launched a new documentation site.
 
-As Egge described:
-
 >With npub.cash v2, Lightning Addresses are no longer tied to a specific wallet.
 >Users can get an address right away, wallets can support whichever address
 >their users prefer, and providers can launch their own services in minutes.
+>
+><cite>Egge</cite>
 
 Npub.cash v2 made Lightning Addresses portable and easy to host. It allows
 people to receive Lightning payments as ecash without staying online, while
