docs: standardize citation formatting with em dash
- Remove redundant attribution line 'As Misovan explained:'
- Add proper <cite>—Misovan</cite> formatting for Minibits quote
- Update Egge citation to use consistent em dash format <cite>—Egge</cite>

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -257,7 +257,7 @@ transfers](https://github.com/minibits-cash/minibits_wallet/commit/4e6c6e9). A
 sender can [prepare a
 payment](https://github.com/minibits-cash/minibits_wallet/commit/12dd4f9) while
 online, then go offline. The recipient can later connect to validate and redeem
-the tokens, or keep them circulating as ecash. As Misovan explained:
+the tokens, or keep them circulating as ecash.
 
 >Thanks to the OpenSats grant, I was able to focus on the niche area of offline
 >ecash payments. For those of us used to fast internet, this may seem like a
@@ -265,6 +265,8 @@ the tokens, or keep them circulating as ecash. As Misovan explained:
 >has become a pioneer in showcasing the unique properties of ecash for moving
 >bitcoin. The wallet enables the payer to be completely offline, leveraging
 >ecash's nature as a true bearer token stored directly in the wallet.
+>
+><cite>—Misovan</cite>
 
 By broadening platform support, improving reliability, enabling sender-locked
 and offline payments, and making transfers easier across devices, Minibits moved
@@ -359,7 +361,7 @@ helped lead multiple releases, and launched a new documentation site.
 >Users can get an address right away, wallets can support whichever address
 >their users prefer, and providers can launch their own services in minutes.
 >
-><cite>Egge</cite>
+><cite>—Egge</cite>
 
 Npub.cash v2 made Lightning Addresses portable and easy to host. It allows
 people to receive Lightning payments as ecash without staying online, while
