docs: fix line break in David Chaum citation
- Consolidate David Chaum citation to single line for better readability
- Remove unnecessary line break in the citation formatting

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -27,8 +27,7 @@ convenient payments.
 >individuals and organizations. The shape of society in the next century may
 >depend on which approach predominates.
 >
-><cite>—[David
->Chaum](https://groups.csail.mit.edu/mac/classes/6.805/articles/money/chaum-electronic-privacy.html)</cite>
+><cite>—[David Chaum](https://groups.csail.mit.edu/mac/classes/6.805/articles/money/chaum-electronic-privacy.html)</cite>
 
 Over the past year, OpenSats has given long-term and targeted support to ecash
 developers and projects. This led to contributors proposing new protocol
