docs: improve wording consistency in ecash blog post
- Change 'ecash initiatives' to 'projects' for better clarity and consistency
- Align terminology with rest of document

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -52,8 +52,7 @@ The cumulative advancement of these projects marks a shift from experimentation
 towards reliable infrastructure, showing that ecash is becoming a more
 dependable part of Bitcoin's payment landscape.
 
-Let's take a closer look at how each of these ecash initiatives is making an
-impact.
+Let's take a closer look at how each of these projects is making an impact.
 
 ---
 
