docs: format version number as code in ecash blog post
- Add backticks around '0.17.x' release series for better technical formatting
- Improve readability of version numbers in technical content

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -87,7 +87,7 @@ These specifications transitioned into production. The reference implementation,
 payments and a Lightning path-finding
 loop](https://github.com/cashubtc/nutshell/pull/692), allowing a single invoice
 to be split across several custodians while improving payment success rates
-across multiple routes. The 0.17.x release series consolidated these advances
+across multiple routes. The `0.17.x` release series consolidated these advances
 into tagged builds
 ([0.17.0](https://github.com/cashubtc/nutshell/releases/tag/0.17.0)), bringing
 Redis-backed caching, [Keycloak-based
