docs: improve link formatting in CDK section
- Convert inline link to reference-style link for better readability
- Change 'With OpenSats' support' to flow more naturally
- Add reference definition for Sats App link

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -146,9 +146,11 @@ different mints more seamlessly, supporting common wallet actions without
 requiring manual mint management. This functionality will be built into the
 bindings once complete and released in a future version of CDK.
 
-With OpenSats' [support](/blog/thirteenth-wave-of-bitcoin-grants#sats-app), the
-team is also building Sats App, a native wallet that applies CDK's new bindings
-on iOS and Android. An iOS TestFlight is targeted for late 2025.
+With OpenSats' support, the team is also building [Sats App][satsapp], a native
+wallet that applies CDK's new bindings on iOS and Android. An iOS TestFlight is
+targeted for late 2025.
+
+[satsapp]: /blog/thirteenth-wave-of-bitcoin-grants#sats-app
 
 CDK is emerging as the developer toolkit that connects protocol advancements
 with real-world applications, ensuring that Cashu can move from research and
