docs: improve attribution in Nutshell section
- Change 'Calle's new standards' to 'the protocol's advancements' for better generality
- Focus on protocol development rather than individual attribution

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -160,7 +160,7 @@ wallets into broader usage across mobile platforms.
 
 As maintainer of the [Nutshell](https://github.com/cashubtc/nutshell) reference
 implementation, [lollerfirst](https://github.com/lollerfirst) focused on making
-Cashu reliable in practice. His work turned Calle's new standards into
+Cashu reliable in practice. His work turned the protocol's advancements into
 production code, added safeguards around issuance, and started research into
 privacy and programmability features.
 
