--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -399,10 +399,13 @@ Flakes](https://nix.dev/concepts/flakes.html), Bitcoin
 testing wallet balances and redemption. These changes make Hashpool
 easier to test and operate under real-world mining conditions.
 
-Hashpool developer vnprc also published a [rust crate](https://crates.io/crates/bitcoin-nostr-relay) for transmitting bitcoin transactions via nostr,
-and continues to experiment with using nostr as a payment forwarding layer. He is also working on a new [user interface](https://nostr.eu/nevent1qqsw2q6nsactqg5c7t3r0se3l276r0xd0agjae6xlv38nzwzuzn8lxcpzemhxue69uhhyetvv9ujumn0wd68ytnzv9hxgq3q6vzjeglr653mrmyqvu0trwaq29az753wr9th3hyrm5p63kz2zu8qf0c27j). These tools will
-be crucial to improving the Hashpool user experience and tooling after the
-core protocol is finalized.
+Hashpool developer vnprc also published a [rust
+crate](https://crates.io/crates/bitcoin-nostr-relay) for transmitting bitcoin
+transactions via nostr, and continues to experiment with using nostr as a
+payment forwarding layer. He is also working on a new [user interface][hash-ui],
+which will be crucial to improving Hashpool's user experience and tooling.
+
+[hash-ui]: https://nostr.eu/nevent1qqsw2q6nsactqg5c7t3r0se3l276r0xd0agjae6xlv38nzwzuzn8lxcpzemhxue69uhhyetvv9ujumn0wd68ytnzv9hxgq3q6vzjeglr653mrmyqvu0trwaq29az753wr9th3hyrm5p63kz2zu8qf0c27j
 
 A related project called
 [Axepool](https://hashpool.dev/dev-logs/dev-log-2025-04-05/#axepool) applies the same design to small-scale miners,
