docs: improve technical terminology in Hashpool section
- Change 'mint role' to 'mint' for better clarity
- Expand 'Sv2 role' to 'Stratum V2 role' for full terminology
- Change 'hashpool repo' to 'hashpool repository' for formal writing
- Enhance technical accuracy and readability

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -392,8 +392,8 @@ security attack surface of the protocol.  Work on Hashpool has resulted in
 [commits](https://github.com/cashubtc/cdk/commit/853f13fc85001af710175489581d701a0667e24d)
 to the cdk project.
 
-The mint role was [refactored] into a proper Sv2 role using all new [extension]
-message types, and the hashpool repo was upgraded with [Nix
+The mint was [refactored] into a proper Stratum V2 role using all new [extension]
+message types, and the hashpool repository was upgraded with [Nix
 Flakes](https://nix.dev/concepts/flakes.html), Bitcoin
 [regtest](https://developer.bitcoin.org/examples/testing.html) setups, and
 [command-line utilities][cli] for testing wallet balances and redemption. These
