docs: standardize ecash terminology in Fedimint section
- Change 'e-cash' to 'ecash' for consistency with rest of document
- Remove hyphenation to follow modern terminology standards
- Improve terminology consistency throughout the blog post

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -425,7 +425,7 @@ with direct, accountless mining rewards that are private and transferable.
 
 ### Fedimint
 
-Fedimint is an ecash protocol based on a federated Chaumian e-cash framework,
+Fedimint is an ecash protocol based on a federated Chaumian ecash framework,
 designed to let communities pool custody and issue private bearer tokens. With
 OpenSats' support, contributors made progress delivering software and tooling.
 
