docs: convert opencash.dev to reference-style link
- Change 'opencash.dev' to reference-style link [opencash.dev]
- Add reference definition for consistent formatting
- Improve readability and maintain consistency with other reference links

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -498,7 +498,7 @@ These calls facilitated the adoption of standards such as WebSocket (NUT-17)
 updates and Payment Requests (NUT-18), ensuring implementations remained
 aligned.
 
-To create a clear entry point for newcomers, OpenCash maintained opencash.dev as
+To create a clear entry point for newcomers, OpenCash maintained [opencash.dev] as
 the hub for grants, bounties, and updates. It also contributed to resources such
 as [cashu.space](https://cashu.space/) and
 [docs.cashu.space](https://docs.cashu.space/resources/learn), shortening the
@@ -509,6 +509,8 @@ it funded the first merchant bridge through BTCPay, sponsored design work,
 coordinated protocol development through public calls, and maintained a stable
 entry point for newcomers. These steps strengthened the foundation for Cashu as
 a privacy-preserving part of the Bitcoin ecosystem.
+
+[opencash.dev]: https://opencash.dev
 
 ---
 
