--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -127,13 +127,11 @@ publish them later, is not compliant with our grant agreement.
 
 ### How does OpenSats evaluate the work done by a grantee?
 
-Every grantee must submit a progress report every 90 days. A markdown template
-is provided when we request your first report. The report in markdown format must be sent to support@opensats.org.
+Every grantee must submit a progress report every 90 days via https://opensats.org/reports/submit. First-time grantees must also submit a 30-day progress report for the first 3 months of their grant period.
 
-If your grant started in March, for example, the 1st report will be due anytime
-during the month of June and should cover the work done from March through May,
-and so on and so forth. You have a 30-day window to submit the report and we
-appreciate if you submit them on time.
+If your grant started in March, for example, the 1st 90-day progress report will be due in June and should cover the work done from March through May. If your report is not received by the last day of the due month, your grant will be paused until your report is submitted. In addition to that, if you are a first-time grantee whose grant started in March, you are also requested to submit 30-day progress reports by the end of April, May and June, and then submit a 90-day progress report in September for the work done from June through August.
+
+Progress reports are one of the few requirements of your OpenSats grant, as they are also essential for our compliance as a 501(c)(3) nonprofit. OpenSats must be able to demonstrate how our funds are being used both to our donors and our auditors.
 
 Reports are evaluated by:
 
@@ -141,8 +139,7 @@ Reports are evaluated by:
 - One or multiple board members
 - At least one person from our operations team
 
-In addition to the 90-day progress reports, we monitor public repositories to
-evaluate progress.
+In addition to the progress reports, we also monitor public repositories to evaluate performance.
 
 ### What does an ideal progress report look like?
 
