--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -127,11 +127,13 @@ publish them later, is not compliant with our grant agreement.
 
 ### How does OpenSats evaluate the work done by a grantee?
 
-Every grantee must submit a progress report every 90 days via https://opensats.org/reports/submit. First-time grantees must also submit a 30-day progress report for the first 3 months of their grant period.
+All grantees must submit a progress report every 90 days via https://opensats.org/reports/submit. First-time grantees must also submit a 30-day progress report for the first 3 months of their grant period.
 
-If your grant started in March, for example, the 1st 90-day progress report will be due in June and should cover the work done from March through May. If your report is not received by the last day of the due month, your grant will be paused until your report is submitted. In addition to that, if you are a first-time grantee whose grant started in March, you are also requested to submit 30-day progress reports by the end of April, May and June, and then submit a 90-day progress report in September for the work done from June through August.
+If you are a first-time grantee whose grant started in March, for example, you are required to submit 30-day progress reports by the end of April, May and June, and then submit a 90-day progress report in September for the work done from June through August, and so on and so forth for all following 90-day periods of your grant.
 
-Progress reports are one of the few requirements of your OpenSats grant, as they are also essential for our compliance as a 501(c)(3) nonprofit. OpenSats must be able to demonstrate how our funds are being used both to our donors and our auditors.
+If you are a second-time grantee whose grant started in March, for example, you will only submit a 90-day progress report in June to cover the work done from March through May, another 90-day report in September to cover the work done from June through August, and so on and so forth for all following 90-day periods of your grant.
+
+If your report is not received by the last day of the due month, your grant will be paused until your report is submitted. Progress reports are a requirement of your OpenSats grant and are also necessary for our compliance as a 501(c)(3) nonprofit. OpenSats must demonstrate to donors and auditors how our funds are being used.
 
 Reports are evaluated by:
 
