--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -127,21 +127,38 @@ publish them later, is not compliant with our grant agreement.
 
 ### How does OpenSats evaluate the work done by a grantee?
 
-All grantees must submit a progress report every 90 days via https://opensats.org/reports/submit. First-time grantees must also submit a 30-day progress report for the first 3 months of their grant period.
+All grantees must submit a progress report every 90 days at
+<https://opensats.org/reports/submit>
 
-If you are a first-time grantee whose grant started in March, for example, you are required to submit 30-day progress reports by the end of April, May and June, and then submit a 90-day progress report in September for the work done from June through August, and so on and so forth for all following 90-day periods of your grant.
+**First-time grantees** must also submit 30-day progress reports during the
+first three months of their grant period. For example, if a grant starts in
+March:
 
-If you are a second-time grantee whose grant started in March, for example, you will only submit a 90-day progress report in June to cover the work done from March through May, another 90-day report in September to cover the work done from June through August, and so on and so forth for all following 90-day periods of your grant.
+- 30-day reports are due at the end of April, May, and June.
+- After that, 90-day reports are due every three months (e.g., September
+  covering June–August, December covering September–November, etc.).
 
-If your report is not received by the last day of the due month, your grant will be paused until your report is submitted. Progress reports are a requirement of your OpenSats grant and are also necessary for our compliance as a 501(c)(3) nonprofit. OpenSats must demonstrate to donors and auditors how our funds are being used.
+**Returning grantees** (second or later grant) submit only 90-day progress
+reports. For example, if a grant starts in March:
+
+- Reports are due in June (covering March–May), September (covering
+  June–August), December (covering September–November), and every 90 days
+  thereafter until the end of the grant.
+
+If a report is not received by the last day of the due month, the grant will be
+paused until it is submitted. Progress reports are a required condition of every
+OpenSats grant and are necessary for compliance with 501(c)(3) nonprofit
+regulations. OpenSats must demonstrate to donors and auditors how grant funds
+are used.
 
 Reports are evaluated by:
 
-- A technical committee
-- One or multiple board members
-- At least one person from our operations team
+- The technical committee
+- One or more board members
+- At least one member of the operations team
 
-In addition to the progress reports, we also monitor public repositories to evaluate performance.
+In addition to reports, OpenSats monitors public repositories to evaluate
+grantee performance.
 
 ### What does an ideal progress report look like?
 
