Edit for clarity
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -130,7 +130,7 @@ publish them later, is not compliant with our grant agreement.
 All grantees must submit a progress report every 90 days at
 <https://opensats.org/reports/submit>
 
-**First-time grantees** must also submit 30-day progress reports during the
+**First-time OpenSats grantees** must also submit 30-day progress reports during the
 first three months of their grant period. For example, if a grant starts in
 March:
 
