--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -127,22 +127,38 @@ publish them later, is not compliant with our grant agreement.
 
 ### How does OpenSats evaluate the work done by a grantee?
 
-Every grantee must submit a progress report every 90 days. A markdown template
-is provided when we request your first report. The report in markdown format must be sent to support@opensats.org.
+All grantees must submit a progress report every 90 days at
+https://opensats.org/reports/submit
 
-If your grant started in March, for example, the 1st report will be due anytime
-during the month of June and should cover the work done from March through May,
-and so on and so forth. You have a 30-day window to submit the report and we
-appreciate if you submit them on time.
+**First-time OpenSats grantees** must also submit 30-day progress reports during the
+first three months of their grant period. For example, if a grant starts in
+March:
+
+- 30-day reports are due at the end of April, May, and June.
+- After that, 90-day reports are due every three months (e.g., September
+  covering June–August, December covering September–November, etc.).
+
+**Returning grantees** (second or later grant) submit only 90-day progress
+reports. For example, if a grant starts in March:
+
+- Reports are due in June (covering March–May), September (covering
+  June–August), December (covering September–November), and every 90 days
+  thereafter until the end of the grant.
+
+If a report is not received by the last day of the due month, the grant will be
+paused until it is submitted. Progress reports are a required condition of every
+OpenSats grant and are necessary for compliance with 501(c)(3) nonprofit
+regulations. OpenSats must demonstrate to donors and auditors how grant funds
+are used.
 
 Reports are evaluated by:
 
-- A technical committee
-- One or multiple board members
-- At least one person from our operations team
+- The technical committee
+- One or more board members
+- At least one member of the operations team
 
-In addition to the 90-day progress reports, we monitor public repositories to
-evaluate progress.
+In addition to reports, OpenSats monitors public repositories to evaluate
+grantee performance.
 
 ### What does an ideal progress report look like?
 
