docs: remove '(Core)' suffix from grant recipient names
- Simplify naming for Daniella Brozzoni and L0rinc in fourteenth wave grants blog post
- Improves readability and consistency in grant recipient listings

--- a/data/blog/fourteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/fourteenth-wave-of-bitcoin-grants.mdx
@@ -28,8 +28,8 @@ The six grant renewals will go to:
 - [Stratum V2][stratum-v2]
 - [BTCPay Server][btcpay-server]
 - [Satsie's Pocket Guides][satsies]
-- [Daniella Brozzoni (Core)][brozzoni]
-- [L0rinc (Core)][l0rinc]
+- [Daniella Brozzoni][brozzoni]
+- [L0rinc][l0rinc]
 
 [cove]: /blog/bitcoin-grants-july-2024#cove
 [stratum-v2]: /blog/bitcoin-and-nostr-grants-august-2023#stratum-v2-testing--benchmarking-tool
