--- a/data/blog/fourteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/fourteenth-wave-of-bitcoin-grants.mdx
@@ -38,7 +38,7 @@ The six grant renewals will go to:
 [brozzoni]: /blog/more-for-core#danielabrozzoni
 [l0rinc]: /blog/more-for-core#l0rinc
 
-Together, these ten projects share a goal of keeping Bitcoin decentralized,
+Each of these projects contributes to keeping Bitcoin decentralized,
 transparent, and user-driven, while ensuring it remains robust and accessible.
 
 None of this would be possible without the generosity of our donors. If you'd
