docs: improve summary clarity in fourteenth wave grants blog post
- Change 'funding ten more open-source projects' to 'giving ten more grants to open-source projects'
- Uses more precise language with 'grants' instead of 'projects'
- 'Giving' is more direct and engaging than 'funding'
- Clarifies the mechanism and removes ambiguity

--- a/data/blog/fourteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/fourteenth-wave-of-bitcoin-grants.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'grants', 'bitcoin', 'wave']
 authors: ['default', 'arvin']
 images: ['/static/images/blog/85-fourteenth-wave-of-bitcoin-grants.jpg']
 draft: false
-summary: "OpenSats is funding ten more open-source projects advancing the Bitcoin ecosystem."
+summary: "OpenSats is giving ten more grants to open-source projects advancing the Bitcoin ecosystem."
 ---
 
 OpenSats is pleased to announce our fourteenth wave of grants from the General
