--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -145,6 +145,8 @@ reports. For example, if a grant starts in March:
   June–August), December (covering September–November), and every 90 days
   thereafter until the end of the grant.
 
+Occasionally, OpenSats may request additional reports on top of the regular schedule described above.
+
 If a report is not received by the last day of the due month, the grant will be
 paused until it is submitted. Progress reports are a required condition of every
 OpenSats grant and are necessary for compliance with 501(c)(3) nonprofit
